# awsdoc-translation-qa

./: README.md
doc-crawler/: crawler.py
doc-crawler/app/: pyproject.toml
doc-translator/: helper.py  pyproject.toml  s3_download.py  s3_downloader.py  s3util.py
src/: crawler.py  helper.py  pyproject.toml  s3util.py
