[tool.poetry]
name = "doc-translator"
version = "0.1.0"
description = "Translate AWS Doc"
authors = ["Jun Ohashi"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.15.11"
lxml = "^4.5.2"
cssselect = "^1.1.0"
jsonlines = "^1.2.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"
pylint = "^2.5.3"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
