[tool.poetry]
name = "awsdoc-translation-qa"
version = "0.1.0"
description = "AWS Document translation QA"
authors = ["Jun Ohashi"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
lxml = "^4.5.1"
boto3 = "^1.14.12"
jsonlines = "^1.2.0"
aiohttp = "^3.6.2"
cssselect = "^1.1.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"
pylint = "^2.5.3"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
